# bevytests

./: .gitignore  Cargo.toml  README.md  advanced-bevy-rendering.rs
assets/models/: character.glb  playground.glb
assets/shaders/: aurora.wgsl
src/: achievements.rs  animation.rs  camera.rs  fx.rs  lighting.rs  main.rs  menu.rs  npcs.rs  physics.rs  player.rs  progression.rs  quests.rs  rendering.rs  shader.rs  ui.rs  world.rs
src/combat/weapons/: types.rs
src/entities/npc/: enemy.rs
src/render/: mod.rs
src/render/ui/: hud.rs  mod.rs
src/stats/: health.rs  mod.rs
src/world/environment/: regions.rs
