[package]
name = "testilu"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.15", features=["jpeg"]}
bevy_animation_graph = {git = "https://github.com/mbrea-c/bevy_animation_graph.git"}
bevy_rapier3d = { version = "0.29.0", features = ["simd-stable", "debug-render-3d"]}
bevy_ui = "0.15.3"
bevy_lunex = {version = "*"}
ghx_proc_gen = "0.4.0"
bevy_hanabi = { version = "0.14", default-features = true, features = [ "3d", "serde" ] }

[dependencies.gltf]
version = "1"

# Default binary is now src/main.rs